Feat/#132 Android 테마 제작 기능 개선 (#133)
* feat: [#132 - ] 플랫폼별 색상/이미지 정보 조회 기능 추가
- Repository에 Platform 기반으로 PlatformColorStyle, PlatformComponentType 조회 기능 추가
Fixes: #132

* feat: [#132 - ] FileManager에 이미지를 InputStream으로 다운로드하는 기능 추가
- S3FileManager, LocalFileManager에 이미지를 InputStream으로 다운로드하는 기능 추가
- FileManger에 주석 추가
Fixes: #132

* feat: [#132 - ] Android 테마 이미지 편집 기능 개선
- ThemePathManager: 테마 이미지 경로 계산 기능 개선
- AndroidComponentDto: 불필요한 필드 제거 및 파일 경로, 파일 확장자 필드 추가
- NinePatchConverter: png 데이터를 9-patch-png 데이터로 변환하는 기능 추가
- FileExtension: png와 9-patch-png 분리
- AndroidThemeImageEditor 기능 개선
Fixes: #132

* feat: [#132 - ] Android 테마 색상 정보 편집 기능 개선
- AndroidColorDto 개선 ( 불필요한 필드 제거 )
- ThemePathManager에 색상 문서 경로 계산 기능 추가
Fixes: #132

* refactor: [#132 - ] Android 테마 메타데이터 수정 기능 개선
- 불필요한 상수 제거 및 명칭 개선
Fixes: #132

* refactor: [#132 - ] Android 테마 제작 기능 중 테마 제작 시 사용되지 않는 기능 제거
- APK Depacker, Repacker, Initializer 제거
Fixes: #132

* feat: [#132 - ] Theme의 이미지 / 색상정보 fetch join 기능 추가
- Theme 이미지를 ID 기반으로 fetch join하는 기능 추가
- Theme 색상 정보를 ID 기반으로 fetch join하는 기능 추가
Fixes: #132

* feat: [#132 - ] Android 테마 제작 기능 개선
- 테마 메타데이터 문서, 결과 apk 경로 계산 기능 추가
- ThemeComponent에 typeCode 필드 추가
- 파일 압축 해제, 폴더 삭제 기능 추가
- apk sign 관련 환경변수 클래스 추가
- 안드로이드 테마 생성 기능 추가
Fixes: #132

* test: [#132 - ] Android 테마 제작 기능 통합 테스트 개발
- Theme 데이터 생성 시 PlatformComponentType, PlatformColorStyle 생성 기능 추가
- 테마 제작 성공 테스트 추가
Fixes: #132

* chore: [#132 - ] android 테마 생성을 위한 테스트/개발 환경 설정
- .gitignore에 키 관련 정보 추가
- build.gradle에 테스트 실행 시 테스트 키 복사 작업 추가
- 서브모듈 개선 ( key 관련 저보 추가 )
- Dockerfile 추가 ( apk 테마 실행용 이미지 )
Fixes: #132

* feat: [#132 - ] 개발용 데이터 생성 시 플랫폼별 색상/이미지 정보를 생성하도록 추가
Fixes: #132

* test: [#132 - ] PlatformComponentTypeControllerTest 문제 수정
- PlatformComponentType 개수 증가에 따른 테스트 코드 수정
Fixes: #132

* feat: [#132 - ] android apk builder 이미지 정보를 환경변수로 관리하도록 변경
- AndroidDockerImageProperties로 환경변수를 받고, AndroidThemeGenerator에서 docker 이미지 이름 생성
- 서브모듈 해시 변경
Fixes: #132

* chore: [#132 - ] merge conflic